# kaesra-ai-agent-personal

./: .env.example  .gitignore  README.md  package-lock.json  package.json
casino-sim/: README.md  main.py  pyproject.toml
chrome-extension/: README.md  background.js  manifest.json  permission.html  permission.js  popup.html  popup.js
src/: index.js
src/agent/: assistantAgent.js  multiAgentBase.js  orchestratorAgent.js  programmerAgent.js  systemPrompt.js  workerAgent.js
src/commands/: apiCommand.js  bridgeCommand.js  browseCommand.js  chatCommand.js  chromeCommand.js  desktopCommand.js  projectCommand.js  researchCommand.js  reverseCommand.js  scanCommand.js  securityCommand.js  taskCommand.js  uiCommand.js
src/core/: config.js  fsUtils.js  logger.js
src/electron/: main.js  preload.js
src/gui/: server.js
src/gui/public/: app.js  index.html  styles.css
src/llm/: anthropicProvider.js  baseProvider.js  genericProvider.js  openaiProvider.js  providerFactory.js
src/services/: bridgeServer.js  chromeCommandBus.js  taskScheduler.js  taskStore.js
src/tools/: apiTool.js  browserTool.js  chromeLiveTool.js  desktopTool.js  fileTool.js  index.js  memoryTool.js  projectTool.js  researchTool.js  schedulerTool.js  shellTool.js
templates/node-api/: README.md  package.json
templates/node-api/src/: index.js
templates/node-cli/: README.md  package.json
templates/python-cli/: README.md  main.py  pyproject.toml
